welcome.lessons.welcome.methods.picture.PictureMono1.scala.error
PictureMono1:5: error: '=' expected but '(' found.
  avance(2);
        ^PictureMono1:5: error: illegal start of simple expression
  avance(2);
           ^PictureMono1:24: error: Unmatched closing brace '}' ignored here
 droite;}} 
        ^